--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Soon...
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://rockwall.github.io/RockWall.PHP" />
+  </head>
+</html>
