--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+    <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; url=https://rockwall.github.io/RockWall.PHP" />
   </head>
+  <body>
+    <h1>Redirecting...</h1>
+    Attempting to redirect to <a href="https://rockwall.github.io/RockWall.PHP">https://rockwall.github.io/RockWall.PHP</a>.
+  </body>
 </html>
